enum EquipmentStatus {
  OPERATIONAL,
  IN_MAINTENANCE,
  NEEDS_CALIBRATION,
  OUT_OF_SERVICE
}