enum RoomStatus {
  AVAILABLE,
  OCCUPIED,
  UNDER_MAINTENANCE,
  RESERVED,
  CLOSED
}