enum RoomType {
  GENERAL_WARD,
  PRIVATE_ROOM,
  ICU,
  PEDIATRIC,
  MATERNITY,
  ISOLATION,
  EMERGENCY
}